# TrainingGL

./: CMakeLists.txt
data/shaders/: Default_FS.glsl  Default_FS.glsl~  Default_VS.glsl  Default_VS.glsl~  SimpleImage_FS.glsl  SimpleImage_VS.glsl  Solid_FS.glsl  Solid_VS.glsl  SpriteSheet_FS.glsl  SpriteSheet_VS.glsl
include/: AppManager.h  Mesh.h  Shader.h  Util.h
src/: AppManager.cpp  Mesh.cpp  Shader.cpp  main.cpp
